========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-07-02

  - Fixed minor bug with rendering postings with missing numbers.


2017-06-25

  - Fixed a minor bug in the tolerance inference code that wouldn't accept a
    posting with a missing number only, e.g. Assets:Checking  USD @ 1.32 CAD.

  - Added a "--no-colon" option to both bean-web and bean-bake in order to
    support Windows filesystems which do not allow colons in filenames.


2017-06-22

  - Added --numberify option to bean-query, which for CSV output will remove the
    currencies of any Amount column. This is great for then uploading to a
    spreadsheet.


2017-05-28

  - Merged patch from Felix Eckhofer that adds an option to bean-format to make
    it use a fixed width. I've been wanting this myself for a while actually, I
    think a fixed value makes more sense than what I'd done previously and
    should eventually be made the default.


2017-05-24

  - Implemented beancount.plugins.auto and beancount.plugins.pedantic. I've been
    wanting to do this for a while. When writing quick-and-dirty little tests,
    inserting 'plugin "beancount.plugins.auto"' is quick and does the job, and
    if you want absolutely all the verifications and to make Beancount as
    pedantic as possible, you should be able to adopt 'plugin
    "beancount.plugins.pedantic"'.

    In order to do that I had to make the loader support plugin definitions
    whose __plugins__ attribute is a function reference, not just a string. It
    supports both now.

  - A number like this now fails to parse: 1,245,449,72.00 USD. I added a test
    in the lexer to tighten the parser. This has been brought up before and will
    potentially avoid input errors.


2017-05-20

  - Clarified error message for price format specified on the command-line.


2017-05-08

  - Made the open/close map return by the getters not a defaultdict by default,