@@ -4,6 +4,11 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2017-07-23
+
+  - Fixed #179: Scientific notation should never appear in rendered output.
+
+
 2017-07-02
 
   - Fixed minor bug with rendering postings with missing numbers.
